extends SQLRow